[package]
name = "ybc_navbar_example"
version = "0.1.0"
authors = ["MarkAnthonyM <MarkAnthonyMartinez9@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ybc = { git = "https://github.com/mneilly/ybc.git", branch = "yew-0-19-update" }
yew = "0.19.3"
js-sys = "0.3.50"

