[package]
name = "ybc_example"
version = "0.19.0"
authors = ["MarkAnthonyM <MarkAnthonyMartinez9@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#ybc = { github = "https://github.com/jeff-k/ybc/" }
ybc = { path = "../ybc" }
yew = "0.19"
yew-router = "0.16"
js-sys = "0.3.50"

